--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.19.2",
+    "axios": "^1.13.4",
+    "cors": "^2.8.6",
     "express": "^5.2.1"
   },
   "devDependencies": {
